[package]
name = "bpe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0"
rayon = "1.5.1"
num_cpus = "1.13.0"
fern = "0.6"
log = "0.4"
chrono = "0.4"
colored = "2.0"
indicatif = "0.16.2"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

